# transtool-django

./: manage.py  pyproject.toml  render.yaml  requirements.txt
translations/: admin.py  file_generator.py  models.py  serializers.py  urls.py  views.py
translations/migrations/: 0001_initial.py
transtool/: asgi.py  settings.py  urls.py  wsgi.py
