[tool.poetry]
name = "transtool-django"
version = "0.1.0"
description = ""
authors = ["Yurii Nalyvaiko <yura.nlvko@gmail.com>"]
readme = "README.md"
packages = [{include = "transtool_django"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1.7"
djangorestframework = "^3.14.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
